<resources>
    <string name="app_name">HabitTracker</string>
    <string name="today">Today</string>
    <string name="eat_healty_feel_healty">Eat Healty Feel Healty</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

    <string-array name="weeks_days">
        <item>M</item>
        <item>T</item>
        <item>W</item>
        <item>T</item>
        <item>F</item>
        <item>S</item>
        <item>S</item>
    </string-array>

    <string-array name="category_period">
        <item>Daily</item>
        <item>Daily / Weekly</item>
        <item>Daily / Weekly /  Monthly</item>
    </string-array>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_habits">My Habits</string>
    <string name="don_t_have_an_account">Don\'t have an account? Click here to Sign up</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="remember_me">Remember me</string>
    <string name="twitter_button">twitter button</string>
    <string name="facebook_button">facebook button</string>
    <string name="google_button">google button</string>
    <string name="or">Or</string>
    <string name="email_icon">email icon</string>
    <string name="password_icon">password icon</string>
    <string name="today_s_progress">Today\'s progress</string>
    <string name="more_of_what_you_like_msg">More of what you like</string>
    <string name="popular_habits">Popular habits</string>
    <string name="habit_categories">Habit Categories</string>
    <string name="habits">Habits</string>
    <string name="days">Days</string>
    <string name="duration">Duration</string>
    <string name="frequency">Frequency</string>
    <string name="search">Search</string>
    <string name="message_info">Adding a vegetable/ fruit juice daily has been shown to increase blood levels of antioxidants, vitamins, and minerals, plus it can help lower blood levels of homocysteine</string>
    <string name="app_logo">Application Logo</string>
    <string name="logo_text">Logo Title</string>
    <string name="splash_screen_quote">Splash Screen Quote</string>
    <string name="signup">Sign Up</string>
    <string name="emailID">Email ID</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="dontHaveAccount">Don\'t have An Account</string>
    <string name="term">By registering, you agree to our Term and Conditions</string>
    <string name="pauseHabit">Pause habit for me</string>
    <string name="deleteHabit">Delete habit</string>
    <string name="progress">Progress</string>
    <string name="_0_0">0/0</string>
    <string name="user_name">User Name</string>
    <string name="already_have_an_account_click_here_to_login">Already have an account? Click here to Login</string>
    <string name="private_habits">Private Habits</string>
    <string name="quote_of_the_day">Quote of the day</string>
    <string name="hello">Hello</string>
    <string name="public_habits">Public Habits</string>
    <string name="compose">Compose</string>
    <string name="overall_progress">Overall Progress</string>
    <string name="consistency">Consistency</string>
    <string name="_0">0%</string>
    <string name="delete">Delete</string>
    <string name="creation_time">Creation time</string>
    <string name="post_picture">Post picture</string>
    <string name="delete_post_menu">Delete post menu</string>
    <string name="likes_button">Likes button</string>
    <string name="welcome_to_the_community">Welcome to the community !</string>
    <string name="find_people">Find people</string>
    <string name="what_s_happening">What\'s happening?</string>
    <string name="replace_image">Replace image</string>
    <string name="habit_image">Habit Image</string>
    <string name="habit_title">Habit Title</string>
    <string name="find_habit">Find habit</string>
    <string name="calendar_view">Calendar view</string>
    <string name="get_reminder">Get Reminder</string>
</resources>