<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginFragment">

    <ImageView
        android:id="@+id/image_background"
        android:layout_width="264dp"
        android:layout_height="304dp"
        android:src="@drawable/welcome_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/mulish_bold"
        android:text="@string/login"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_background" />

    <LinearLayout
        android:id="@+id/login_icons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_label">

        <ImageButton
            android:id="@+id/login_twitter"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/twitter"
            android:contentDescription="@string/twitter_button" />


        <ImageButton
            android:id="@+id/login_facebook"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/facebook"
            android:contentDescription="@string/facebook_button" />

        <ImageButton
            android:id="@+id/login_google"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/mail"
            android:contentDescription="@string/google_button" />
    </LinearLayout>


    <TextView
        android:id="@+id/or_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_icons" />

    <ImageView
        android:id="@+id/img_at"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:contentDescription="@string/email_icon"
        android:src="@drawable/arroba"
        app:layout_constraintBottom_toBottomOf="@id/email_login_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/email_login_text" />

    <EditText
        android:id="@+id/email_login_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="Email ID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/img_at"
        app:layout_constraintTop_toBottomOf="@id/or_label" />

    <ImageView
        android:id="@+id/lock_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:contentDescription="@string/password_icon"
        android:src="@drawable/lock"
        app:layout_constraintBottom_toBottomOf="@id/password_login_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/password_login_text" />


    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/remember_ckb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_login_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="4dp"
        android:paddingEnd="0dp"
        android:text="@string/remember_me"
        app:layout_constraintBottom_toBottomOf="@id/remember_ckb"
        app:layout_constraintStart_toEndOf="@id/remember_ckb"
        app:layout_constraintTop_toTopOf="@id/remember_ckb" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/forgot_password"
        app:layout_constraintBottom_toBottomOf="@id/remember_ckb"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toTopOf="@id/remember_ckb" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password_login_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/img_at"
        app:layout_constraintTop_toBottomOf="@id/email_login_text" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/login_button"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@id/signup_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/remember_ckb" />

    <TextView
        android:id="@+id/signup_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/don_t_have_an_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
