<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="186dp"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="15dp"
    app:cardElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="16dp">

        <TextView
            android:id="@+id/habit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxEms="5"
            android:maxLines="1"
            app:layout_constraintEnd_toStartOf="@id/progress_percent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Payoff credit Card" />

        <TextView
            android:id="@+id/habit_message"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:lines="2"
            android:text="@string/overall_progress"
            app:layout_constraintStart_toStartOf="@id/habit_text"
            app:layout_constraintTop_toBottomOf="@id/habit_text" />


        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:progress="75"
            app:indicatorColor="@color/yellow"
            app:indicatorSize="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:trackColor="@color/card_background_light_color"
            app:trackCornerRadius="8dp"
            app:trackThickness="6dp" />

        <TextView
            android:id="@+id/percent_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            app:layout_constraintBottom_toBottomOf="@id/progress_percent"
            app:layout_constraintEnd_toEndOf="@id/progress_percent"
            app:layout_constraintStart_toStartOf="@id/progress_percent"
            app:layout_constraintTop_toTopOf="@id/progress_percent" />

        <com.antgroup.antv.f2.F2CanvasView
            android:id="@+id/canvas_view"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/progress_percent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/consistency"
            app:layout_constraintEnd_toEndOf="@id/canvas_view"
            app:layout_constraintStart_toStartOf="@id/canvas_view"
            app:layout_constraintTop_toBottomOf="@id/canvas_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>