<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.habit.HabitDetailFragment"
    >

    <TextView
        android:id="@+id/titleHabit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/mulish_bold"
        android:text="Drink Fruit Juice"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <xyz.sahildave.arclayout.ArcLayout
        android:id="@+id/image_arc"
        android:layout_width="match_parent"
        android:layout_height="224dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleHabit">

        <ImageView
            android:id="@+id/detail_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:cropToPadding="true"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/food_habits_full" />
    </xyz.sahildave.arclayout.ArcLayout>


    <TextView
        android:id="@id/duration_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/mulish_bold"
        android:text="@string/duration"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@id/frequency_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_arc" />


    <TextView
        android:id="@+id/duration_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="4"
        android:fontFamily="@font/mulish_regular"
        android:gravity="center_horizontal"
        android:maxLines="3"
        android:minLines="1"
        android:text="10 mins a day"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/duration_label"
        app:layout_constraintStart_toStartOf="@id/duration_label"
        app:layout_constraintTop_toBottomOf="@id/duration_label" />

    <TextView
        android:id="@id/frequency_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/mulish_bold"
        android:text="@string/frequency"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@id/days_label"
        app:layout_constraintStart_toEndOf="@id/duration_label"
        app:layout_constraintTop_toBottomOf="@id/image_arc" />

    <TextView
        android:id="@+id/frequency_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="4"
        android:fontFamily="@font/mulish_regular"
        android:gravity="center_horizontal"
        android:lines="2"
        android:maxLines="3"
        android:minLines="1"

        android:text="Daily"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/frequency_label"
        app:layout_constraintStart_toStartOf="@id/frequency_label"
        app:layout_constraintTop_toBottomOf="@id/frequency_label" />


    <TextView
        android:id="@id/days_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/mulish_bold"
        android:text="@string/days"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/frequency_label"
        app:layout_constraintTop_toBottomOf="@id/image_arc" />

    <TextView
        android:id="@+id/days_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="4"
        android:fontFamily="@font/mulish_regular"
        android:gravity="center_horizontal"
        android:maxLines="3"
        android:minLines="1"
        android:text="45"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/days_label"
        app:layout_constraintStart_toStartOf="@id/days_label"
        app:layout_constraintTop_toBottomOf="@id/days_label" />

    <ImageView
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:src="@drawable/separator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frequency_label" />


    <TextView
        android:id="@+id/message_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/mulish_regular"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="8dp"
        android:maxLines="6"
        android:minLines="2"
        android:text="@string/message_info"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/days_label"
        app:layout_constraintStart_toStartOf="@id/duration_label"
        app:layout_constraintTop_toBottomOf="@id/separator" />


    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="Take up habit now !"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>